# aquaorder

./: .gitignore  default.nix  module.nix  setup.cfg  setup.py
src/: script.ts  style.scss
src/aqua/order/: html.py  pdf.py  types.py  web.py
src/aqua/order/resources/: index.html
tests/: test_black.py  test_flake8.py  test_tsc.py  test_types.py
