[metadata]
name = aquaorder
description = ...
author = schnusch
license = AGPL-3.0-or-later
license_file = COPYING.md

[options]
packages =
    aqua.order
    aqua.order.resources
package_dir =
    = src
install_requires =
    aiohttp
    jinja2
    jsonschema
    PyYAML
test_suite = tests
tests_require =
    black
    flake8
    mypy

[options.package_data]
aqua.order.resources =
    index.html
    style.css

[options.extras_require]
systemd = systemd_python

[options.entry_points]
console_scripts =
    aquaorder = aqua.order.web:main

[flake8]
max-line-length = 88
# E203 conflicts with black
ignore = E501,W503
exclude = .git,__pycache__,build,dist

[mypy]
warn_redundant_casts = true
disallow_untyped_calls = true
disallow_untyped_defs = true
no_implicit_optional = true
